2002-10-10  Larry Ewing  <lewing@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: remove bogus accelerator for strikeout.

2002-10-04  Radek Doulik  <rodo@ximian.com>

	* toolbar.c (toolbar_item_update_sensitivity): set unindent
	sensitivity only when level > 0
	(indentation_changed): new signal handler, cares about unindent
	button sensitivity
	(create_style_toolbar): connect indentation_changed

2002-10-07  Larry Ewing  <lewing@ximian.com>

	* spell.c (spell_create_language_menu): we cannot use the return
	value if we get an exception.

2002-10-02  Larry Ewing  <lewing@ximian.com>

	* search.c (gtk_html_search_dialog_new): add window icon to
	dialog.

	* replace.c (ask_dialog_new): add icon to dialog.
	(gtk_html_replace_dialog_new): add window icon to dialog.

	* properties.c (gtk_html_edit_properties_dialog_new): add new
	icon_path parameter to dialog creation.

	* properties.h: fix prototype.

	* popup.c (link_prop_dialog): add icons to property widgets.

	* menubar.c: add icons to property widgets.

	* editor-control-factory.c (release): add icon for properties
	dialog.

2002-09-30  Larry Ewing  <lewing@ximian.com>

	* popup.c (prepare_properties_and_menu): move the cut/copy/paste
	items and add undo/redo items.

2002-09-26  Radek Doulik  <rodo@ximian.com>

	* menubar.c (file_dialog_ok): use html_engine_paste_text instead
	of e-utils
	(insert_file_dialog): open file selector in home directory instead
	of cwd

2002-09-25  Larry Ewing  <lewing@ximian.com>

	* popup.c (copy): call with the widget not the engine.
	(cut): same.

	* GNOME_GtkHTML_Editor.xml.in: fix accelerator for Quotation
	pasting.

	* popup.c (prepare_properties_and_menu): fix the cut/copy/paste
	items to use the CLIPBOARD selection and make them show up all the
	time (use sensitivity if the selection is not active).

2002-09-16  Radek Doulik  <rodo@ximian.com>

	* popup.c (prepare_properties_and_menu): check if selection
	contains link before including remove link